add: use P7 logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,25 @@ set (CMAKE_CXX_EXTENSIONS OFF)
 
 
 include_directories (fuse)
-aux_source_directory (. SRC_LIST)
-add_executable (${PROJECT_NAME} ${SRC_LIST})
 
+set(SOURCES "fuse-mbtiles.cpp")
+
+option(USE_LOGGER "Use logger" OFF)
+if(USE_LOGGER)
+	add_definitions( -DUSE_LOGGER )
+	set(LOGGER_DIR . CACHE STRING "Logger include and source directory")
+	include_directories(${LOGGER_DIR})
+	option(USE_LOGGER_P7 "Use logger P7" OFF)
+	if(USE_LOGGER_P7)
+		add_definitions( -DUSE_LOGGER_P7 )
+		set(P7_INCLUDE_DIR /usr/include/P7 CACHE STRING "P7 logger include directory")
+		include_directories(${P7_INCLUDE_DIR})
+	endif()
+	list(APPEND SOURCES "${LOGGER_DIR}/Logger.cpp")
+	list(APPEND HEADERS "${LOGGER_DIR}/Logger.h")
+endif() 
+
+add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
 get_target_property(USED_CXX_STANDARD ${PROJECT_NAME} CXX_STANDARD)
 if (USED_CXX_STANDARD LESS 17)
@@ -31,6 +47,9 @@ if (USED_CXX_STANDARD LESS 17)
 	include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
-
 add_definitions (-D_FILE_OFFSET_BITS=64)
 target_link_libraries (${PROJECT_NAME} fuse sqlite3 z)
+if(USE_LOGGER_P7)
+	target_link_libraries(${PROJECT_NAME} pthread rt p7.a)
+endif()
+
